templates/k8s-controller-sidecars_template.yaml
---
# Source: k8s-controller-sidecars/templates/networkpolicy.yaml.tpl
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:  
  name: k8s-controller-sidecars-release-name
  labels:
    app: k8s-controller-sidecars
    chart: k8s-controller-sidecars-0.0.4
    release: release-name
    heritage: Helm
spec:
  types:
    - Egress
  selector: app == "k8s-controller-sidecars" && release == "release-name"
  # Allow accessing the K8s API.
  egress:
    - action: Allow
      destination:
        services:
          name: kubernetes
          namespace: default
